# itfvalidator-python

./: .gitignore  LICENSE  README.md  pyproject.toml
itf/: check_digit.py  code.py  internal.py
pyitf/: check_digit.py  code.py
tests/: test_check_digit.py  test_code.py  test_itf.py
