[tool.poetry]
name = "pyitf"
version = "0.1.0"
description = "Provides trivial support for working with Interleaved 2 of 5 (aka itf or i25) bar codes in Python."
license = "MIT"
authors = ["dsqrt4 <44970945+dsqrt4@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
